# oclint

./: README.md  dune-project  oclint.opam
test/: cli.t
test/double-semicolon.t/: run.t  test.ml
test/forbidden-function.t/: dune  run.t  test.ml
test/function-too-long.t/: run.t  test.ml
test/function-without-type-annotation.t/: run.t  test.ml
test/imperative-constructs.t/: dune-project  run.t  test.ml
test/improper-casing.t/: run.t  test.ml
test/line-too-long.t/: run.t  test.ml
test/mutable-field.t/: run.t  test.ml
test/toplevel-eval.t/: run.t  test.ml
test/undescore-used.t/: run.t  test.ml
