(lang dune 3.17)
(cram enable)
(name oclint)
(generate_opam_files true)
(source (github acieroid/oclint))
(authors "Quentin Stiévenart <quentin.stievenart@gmail.com>")
(maintainers "Quentin Stiévenart <quentin.stievenart@gmail.com>")
(license LGPL-3.0-only)
(package
 (name oclint)
 (synopsis "A simple linter")
 (description "A simple linter")
 (depends ocaml)
 (tags (lint)))
